# irium

./: .env.example  .gitignore  AGENTS.md  AUTO_UPDATE_README.md  BLOCKCHAIN_IMPLEMENTATION_SUMMARY.md  BUGFIX_MULTICORE_MINING.txt  CHANGELOG.md  CHANGELOG_v1.2.0.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECENTRALIZATION_PLAN.md  DEVELOPMENT_ROADMAP.md  DISCUSSION_SETUP.md  Dockerfile.irium-miner  Dockerfile.iriumd  EMERGENCY_NETWORK_REBUILD.md  FINAL_UPLOAD_SUMMARY.md  GAS_FEE_EXPLANATION.md  GITHUB_RELEASE_NOTES_v1.1.0.md  GITHUB_UPLOAD_INSTRUCTIONS.md  GPU-MINER.md  IRIUM_COMPLETE_CHECKLIST.md  IRIUM_NETWORK_TRACKER.md  IRIUM_UPDATED_CHECKLIST.md  ISSUES_TRACKER_v1.2.0.md  LICENSE  MASTER_SUMMARY.md  MINING-QUICKSTART.txt  MINING.md  PROJECT_COMPLETION_ROADMAP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_UPDATE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.8.md  (+35 more)
.github/: DISCUSSION_CATEGORIES.md  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES.md  labeler.yml
.github/DISCUSSION_TEMPLATES/: feature-requests.md  introduce-yourself.md  mining-setup.md  node-operators.md  (+6 more)
apps/irium-core-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/irium-core-gui/src-tauri/src/: explorer.rs  log_tail.rs  main.rs  node_manager.rs  rpc_client.rs  settings.rs  wallet.rs
assets/: README.md
bootstrap/: README.md  anchors.json  banned_peers.sample  banned_peers.sample.sig  banned_peers.txt  seedlist.extra  seedlist.runtime  seedlist.txt  seedlist.txt.sig  static_peers.txt
config/: genesis-locked.json
configs/: consensus.json  genesis-locked.json  genesis.json  node.json
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.indexer  nginx-frontend.conf
docs/: API.md  ATTESTOR-GUIDE.md  DEVELOPER-QUICKSTART.md  DOCKER.md  INCIDENT_2026-04-06_MAINNET_RECOVERY.md  KEY-DERIVATION.md  LISTING-APPLICATION.md  LWMA_MAINNET_ROLLOUT.md  MAINTENANCE_VPS_NODE_STALE_BINARY.md  MERGED-MINING.md  MINING.md  MULTISIG.md  OPS_RUNBOOK.md  POAWX.md  POOL-OPERATOR.md  POOL_STRATUM.md  PRIVACY.md  SEED-NODE.md  SETTLEMENT-DEV.md  SETTLEMENT-EXAMPLE.md  SOLO_POOL.md  SOLO_STRATUM.md  STRATUM_SETUP.md  TESTNET_FEEDBACK.md  TESTNET_QUICKSTART.md  TESTNET_QUICKSTART_WINDOWS.md  WALLET-CLI.md  WEBSOCKET.md  WHITEPAPER.md  architecture.md  atomic_swap_readiness_report.md  atomic_swaps.md  block-propagation-roadmap.md  block_time_v2_activation.md  commercial.md  github-issues-to-open.md  htlcv1_activation_commit_workflow.md  htlcv1_activation_source.md  htlcv1_devnet_test_guide.md  htlcv1_devnet_trial_report.md  (+162 more)
explorer/: Cargo.toml  agreement.html  app.js  index.html  reputation.html  widget.js
explorer/api/: Cargo.toml
explorer/api/src/: config.rs  db.rs  error.rs  main.rs  models.rs  rate_limit.rs
explorer/api/src/routes/: address.rs  agreements.rs  blocks.rs  miners.rs  mod.rs  search.rs  stats.rs  status.rs  txs.rs
explorer/indexer/: Cargo.toml
explorer/indexer/migrations/: 001_initial.sql  002_coinbase_tag.sql
explorer/indexer/src/: config.rs  indexer.rs  main.rs  rpc.rs
explorer/indexer/src/db/: mod.rs  read.rs  write.rs
explorer/indexer/src/decoder/: address.rs  mod.rs  script.rs  tx.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
irium/: QUICKSTART.md  __init__.py  __main__.py  anchors.py  block.py  chain.py  constants.py  mempool.py  miner.py  network.py  p2p.py  p2p.py.backup_ping  p2p.py.bak2  pow.py  protocol.py  rate_limiter.py  relay.py  spv.py  sybil.py  tx.py  update_checker.py  uptime.py  wallet.py
pool/: README.md  stats-proxy.py
pool/irium-pool-api/: Cargo.toml
pool/irium-pool-api/src/: config.rs  db.rs  main.rs  poller.rs  upstream.rs
pool/irium-pool-api/src/routes/: blocks.rs  health.rs  miners.rs  mod.rs  network.rs  pool.rs  relay.rs
pool/irium-stratum/: Cargo.toml  README.md
pool/irium-stratum/src/: block.rs  delegation.rs  events.rs  main.rs  payout.rs  pow.rs  stratum.rs  template.rs
releases/v1.1.0/irium-v1.1.0/rust/iriumd/: Cargo.toml
releases/v1.1.0/irium-v1.1.0/rust/iriumd/src/: main.rs
scripts/: broadcast-emergency.py  broadcast-transaction.py  calculate-genesis-fast.py  calculate-genesis.py  check-and-launch.sh  check-balance-v2-clean.py  check-balance.py  check-genesis-progress.sh  create_genesis.py  init-blockchain.py  irium-explorer-api.py  irium-miner-individual.py.bak.1761789448  irium-miner-individual.py.bak.1761789621  irium-miner-individual.py.bak.1761789857  irium-miner-multicore.sh  irium-miner-working.py  irium-miner.py  irium-miner.py.broken  irium-node.py  irium-simple-miner.py  irium-wallet-api-ssl.py  irium-wallet-api-ssl.py.backup3  irium-wallet-full.py  irium-wallet-integration.py  irium-wallet-proper.py  irium-wallet-proper.py.backup  irium-wallet-summary.py  irium-wallet.py  irium-zero.sh  iriumd.service.example  load-genesis.py  mine-genesis.py  monitor-transactions.py  poawx-delegation-validate.sh  poawx-firewall-template.sh  poawx-log-passfail.sh  poawx-phase11b-canonical-receipts-validation.py  poawx-pilot-readiness-check.sh  poawx-pool-identity-package.sh  poawx-soak-harness.sh  (+23 more)
sdk/: irium_client.py
src/: activation.rs  anchors.rs  attestor_bond.rs  auxpow.rs  block.rs  btc_p2p.rs  btc_spv.rs  btc_tx_parse.rs  chain.rs  constants.rs  doge_p2p.rs  doge_spv.rs  genesis.rs  irium-miner.rs  irium-spv.rs  iriumd.rs  lib.rs  ltc_p2p.rs  ltc_spv.rs  main.rs  mempool.rs  network.rs  network_era.rs  p2p.rs  p2p.rs.pre-scoring  p2p_wire.rs  poawx.rs  poawx_adaptive.rs  poawx_admission.rs  poawx_candidate.rs  poawx_challenge.rs  poawx_committed_admission.rs  poawx_dominance.rs  poawx_finality.rs  poawx_gossip.rs  poawx_mining_harness.rs  poawx_penalty.rs  poawx_proposer.rs  poawx_puzzle.rs  poawx_ticket.rs  (+14 more)
systemd/: explorer.env.example  irium-explorer.service  irium-miner.service  irium-wallet-api.service  iriumd.env.example  iriumd.service  miner.env.example  stratum.env.example  wallet-api.env.example
tests/: test_chain_genesis.py  test_genesis_loader.py
tools/: irium-stratum-healthcheck.sh  pool_height_doctor.sh
(+235 files in other folders)
