[package]
name = "irium-node-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
chrono = { version = "0.4", features = ["clock"] }

k256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }

rand_core = "0.6"
