[package]
name = "irium-node-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ripemd = "0.1"
bs58 = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
chrono = { version = "0.4", features = ["clock"] }
libc = "0.2"
k256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }

axum-server = { version = "0.8", features = ["tls-rustls"] }

tower-http = { version = "0.5", features = ["cors"] }

rand_core = "0.6"
get_if_addrs = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
qrcode = "0.14"

aes-gcm = "0.10"

pbkdf2 = "0.12"
ocl = { version = "0.19", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
gpu = ["ocl"]

[[bin]]
name = "irium-miner-gpu"
path = "src/bin/irium-miner-gpu.rs"
required-features = ["gpu"]
