[package]
name = "irium-node-rs"
version = "1.1.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
ripemd = "0.1"
bs58 = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
chrono = { version = "0.4", features = ["clock"] }
libc = "0.2"
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
# GROUP C: WS client used by `irium-wallet watch` to subscribe to iriumd's
# /ws event stream for auto-release. rustls flavour matches the rest of
# the dep tree (reqwest already uses rustls-tls). Pinned to 0.21 to match
# the tokio 1.x ecosystem of the rest of the workspace.
# GROUP C ws client. TLS feature intentionally disabled — wallet only connects
# to local iriumd via ws://127.0.0.1; pulling in rustls-tls-webpki-roots drags in
# rustls-webpki 0.102.8 which has 4 open RustSec advisories and breaks cargo audit.
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
axum = { version = "0.7", features = ["macros", "ws"] }

axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false }

tower-http = { version = "0.5", features = ["cors"] }

rand_core = "0.6"
get_if_addrs = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
qrcode = "0.14"

aes-gcm = "0.10"

pbkdf2 = "0.12"
bip39 = { version = "2", features = ["rand"] }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
ocl = { version = "0.19", optional = true }
scrypt = "0.11"
rayon = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
gpu = ["ocl"]

[[bin]]
name = "irium-miner-gpu"
path = "src/bin/irium-miner-gpu.rs"
required-features = ["gpu"]
