[package]
name = "irium-pool-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["macros"] }
tower-http   = { version = "0.5",  features = ["cors"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono       = { version = "0.4",  features = ["clock"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite     = { version = "0.31", features = ["bundled"] }
