[package]
name = "irium-stratum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bs58 = "0.5"
