[package]
name = "irium-stratum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bs58 = "0.5"
# Rate-limiting + global session cap (v1.9.23): per-IP DashMap tracks
# connection bursts so a single host can't hammer the stratum accept loop,
# and a separate ban-list map holds repeat offenders. once_cell is needed
# to lazily initialise the two DashMaps as statics.
dashmap = "5"
once_cell = "1"

[dev-dependencies]
irium-node-rs = { path = "../../" }
