[package]
name = "irium-core-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
directories = "5"
hex = "0.4"
rand = "0.8"
irium-node-rs = { path = "../../../", package = "irium-node-rs" }

[features]
custom-protocol = ["tauri/custom-protocol"]
